k8s/01-namespace.yaml
####################################################
# namespace
####################################################
apiVersion: v1
kind: Namespace
metadata:
  name: sb-tracing-demo
  labels:
    istio-injection: enabled
