k8s/08-redis-master.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-master
  namespace: sb-tracing-demo
  labels:
    app: redis
    chart: redis-3.0.2
    release: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      release: redis
      role: master
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redis
        release: redis
        role: master
    spec:
      volumes:
        - name: config-redis
          configMap:
            name: redis-config
            defaultMode: 420
      containers:
        - name: redis-master
          image: redis:latest
          command:
            - redis-server
          args:
            - /usr/local/etc/redis/redis.conf
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config-redis
              mountPath: /usr/local/etc/redis/
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        runAsUser: 0
        fsGroup: 1001
      schedulerName: default-scheduler
  serviceName: redis-master
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
