k8s/02-redis.yaml
####################################################
# redis
####################################################
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    release: redis
  name: redis-master
  namespace: sb-tracing-demo
spec:
  type: ClusterIP
  selector:
    app: redis
    release: redis
    role: master
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: redis
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  labels:
    app: redis
    chart: redis-3.0.2
    release: redis
  name: redis-master
  namespace: sb-tracing-demo
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: redis
      release: redis
      role: master
  serviceName: redis-master
  template:
    metadata:
      labels:
        app: redis
        release: redis
        role: master
    spec:
      containers:
      - name: redis-master
        image: bitnami/redis:4.0.9
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - containerPort: 6379
          name: redis
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          failureThreshold: 5
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /bitnami/redis/data
          name: redis-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroup: 1001
        # runAsUser: 1001
        # https://github.com/bitnami/bitnami-docker-redis/issues/106#issuecomment-388884372
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: redis-data
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
