k8s/03-foo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: sb-tracing-demo
  name: foo-svc
  labels:
    app: foo-svc
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: foo-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-svc
  namespace: sb-tracing-demo
spec:
  selector:
    matchLabels:
      app: foo-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: foo-svc
    spec:
      volumes:
        - name: agent
          emptyDir: {}
      containers:
      - name: foo-svc
        image: taloricag/sb-agent-demo-foo-svc:0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - name: agent
            mountPath: /sidecar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-svc
  namespace: sb-tracing-demo
spec:
  selector:
    matchLabels:
      app: foo-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: foo-svc
    spec:
      volumes:
        - name: agent
          emptyDir: {}
      containers:
      - name: foo-svc
        image: taloricag/sb-agent-demo-foo-svc:0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - name: agent
            mountPath: /sidecar
