k8s/05-loo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: sb-tracing-demo
  name: loo-svc
  labels:
    app: loo-svc
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: loo-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loo-svc
  namespace: sb-tracing-demo
spec:
  selector:
    matchLabels:
      app: loo-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: loo-svc
    spec:
      volumes:
        - name: agent
          emptyDir: {}
      containers:
      - name: loo-svc
        image: taloricag/sb-agent-demo-loo-svc:0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - name: agent
            mountPath: /sidecar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loo-svc
  namespace: sb-tracing-demo
spec:
  selector:
    matchLabels:
      app: loo-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: loo-svc
    spec:
      volumes:
        - name: agent
          emptyDir: {}
      containers:
      - name: loo-svc
        image: ${image_repo}/springboot-loo-svc:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - name: agent
            mountPath: /sidecar
